:sparkles: finishing most forms and requests
Quelques asserts a faire aux niveau des addresses

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
 
             logout:
                 path: security_logout
-                target: contact
+                target: /registration
             # activate different ways to authenticate
 
             # http_basic: true
